--- a/ansible/roles/vkill.gpg2_key_mgr/tasks/fetch.yml
+++ b/ansible/roles/vkill.gpg2_key_mgr/tasks/fetch.yml
@@ -3,7 +3,7 @@
 - name: Fetch files to local
   fetch:
     src: "~/{{ gpg2_key_basedir }}/{{ gpg2_key_path }}/{{ gpg2_key_files[item] }}"
-    dest: "{{ gpg2_key_fetch_dest_basedir }}/{{ gpg2_key_basedir }}/{{ gpg2_key_path }}/{{ gpg2_key_files[item] }}"
+    dest: "{{ gpg2_key_fetch_dest_basedir }}/{{ item }}"
     flat: "{{ gpg2_key_fetch_flat }}"
   become: yes
   become_user: "{{ gpg2_key_user }}"
