--- a/ansible/playbook_dev.yml.example
+++ b/ansible/playbook_dev.yml.example
@@ -120,35 +120,35 @@
             - notifempty
             - copytruncate
 
-    - role: vkill.gpg2_key_mgr
-      tags: gpg2_key
-      gpg2_key_user: "{{ local_bastion_host.user_name }}"
-      gpg2_key_fetch_dest_basedir: "backup/local_bastion_host"
-      gpg2_key_fetch_files:
+    - role: vkill.gpg_key_mgr
+      tags: gpg_key
+      gpg_key_user: "{{ local_bastion_host.user_name }}"
+      gpg_key_fetch_dest_basedir: "backup/local_bastion_host"
+      gpg_key_fetch_files:
         - public_asc
         - uid
         - uid_hash
 
-    - role: vkill.gpg2_key_mgr
-      tags: gpg2_key
-      gpg2_key_user: "{{ local_website_host.user_name }}"
-      gpg2_key_fetch_dest_basedir: "backup/local_website_host"
-      gpg2_key_fetch_files:
+    - role: vkill.gpg_key_mgr
+      tags: gpg_key
+      gpg_key_user: "{{ local_website_host.user_name }}"
+      gpg_key_fetch_dest_basedir: "backup/local_website_host"
+      gpg_key_fetch_files:
         - public_asc
         - uid
         - uid_hash
 
-    - role: vkill.gpg2_key_mgr
-      tags: gpg2_key
-      gpg2_key_user: "{{ local_bastion_host.user_name }}"
-      gpg2_key_action: 'import'
-      gpg2_key_import_local_public_key_file: "backup/local_website_host/public_asc"
+    - role: vkill.gpg_key_mgr
+      tags: gpg_key
+      gpg_key_user: "{{ local_bastion_host.user_name }}"
+      gpg_key_action: 'import'
+      gpg_key_import_local_public_key_file: "backup/local_website_host/public_asc"
 
-    - role: vkill.gpg2_key_mgr
-      tags: gpg2_key
-      gpg2_key_user: "{{ local_website_host.user_name }}"
-      gpg2_key_action: 'import'
-      gpg2_key_import_local_public_key_file: "backup/local_bastion_host/public_asc"
+    - role: vkill.gpg_key_mgr
+      tags: gpg_key
+      gpg_key_user: "{{ local_website_host.user_name }}"
+      gpg_key_action: 'import'
+      gpg_key_import_local_public_key_file: "backup/local_bastion_host/public_asc"
 
     - role: vkill.ssh_key_mgr
       tags: ssh_key
