--- a/ansible/playbook_dev.yml.example
+++ b/ansible/playbook_dev.yml.example
@@ -124,7 +124,7 @@
       tags: gpg_key
       gpg_key_import_enable: false
       gpg_key_user: "{{ local_bastion_host.user_name }}"
-      gpg_key_gen_fetch_dest_basedir: "backup/local_bastion_host"
+      gpg_key_gen_fetch_dest_basedir: "backup/local_bastion_host/gpg_key"
       gpg_key_gen_fetch_files:
         - public_asc
         - uid
@@ -134,7 +134,7 @@
       tags: gpg_key
       gpg_key_import_enable: false
       gpg_key_user: "{{ local_website_host.user_name }}"
-      gpg_key_gen_fetch_dest_basedir: "backup/local_website_host"
+      gpg_key_gen_fetch_dest_basedir: "backup/local_website_host/gpg_key"
       gpg_key_gen_fetch_files:
         - public_asc
         - uid
@@ -144,17 +144,19 @@
       tags: gpg_key
       gpg_key_user: "{{ local_bastion_host.user_name }}"
       gpg_key_gen_enable: false
-      gpg_key_import_local_public_key_file: "backup/local_website_host/public_asc"
+      gpg_key_import_local_public_key_file: "backup/local_website_host/gpg_key/public_asc"
 
     - role: vkill.gpg_key
       tags: gpg_key
       gpg_key_user: "{{ local_website_host.user_name }}"
       gpg_key_gen_enable: false
-      gpg_key_import_local_public_key_file: "backup/local_bastion_host/public_asc"
+      gpg_key_import_local_public_key_file: "backup/local_bastion_host/gpg_key/public_asc"
 
-    - role: vkill.ssh_key_mgr
+    - role: vkill.ssh_key
       tags: ssh_key
-      ssh_user: "{{ local_bastion_host.user_name }}"
+      ssh_key_user: "{{ local_bastion_host.user_name }}"
+      ssh_key_gen_fetch_enable: true
+      ssh_key_gen_fetch_dest_basedir: "backup/local_bastion_host/ssh_key"
 
   tasks:
     - name: 'Replace gem source with become'
