--- a/ansible/roles/vkill.gpg_key/defaults/main.yml
+++ b/ansible/roles/vkill.gpg_key/defaults/main.yml
@@ -30,7 +30,7 @@ gpg_key_gen_fetch_flat: "yes"
 gpg_key_gen_fetch_files: []
 
 
-gpg_key_import_enable: true
+gpg_key_import_enable: false
 gpg_key_import_local_public_key_file: ''
 
 gpg_key_install_haveged: true
