--- a/ansible/playbook_dev.yml.example
+++ b/ansible/playbook_dev.yml.example
@@ -17,7 +17,7 @@
       tags: system
 
     - name: 'Update apt cache (Debian)'
-      apt: update_cache=yes cache_valid_time=86400
+      apt: update_cache=yes
       when: ansible_os_family == 'Debian'
       tags: system
 
