--- a/ansible/vars/settings_dev.yml.example
+++ b/ansible/vars/settings_dev.yml.example
@@ -2,29 +2,32 @@
 
 time_zone: Asia/Shanghai
 
-db:
+web_url:
+  host: 192.168.100.100
+  port: 3000
+
+web_db:
   adapter: mysql2
   host: 127.0.0.1
   username: ssh_bastion
   password: pa123456
   database: ssh_bastion_development
 
-redis:
+web_redis:
   host: 127.0.0.1
   port: 6379
 
-smtp:
+web_smtp:
   host: 127.0.0.1
   port: 1025
 
-web:
-  ip: 192.168.100.100
+web_host:
+  user: vagrant
 
-local_bastion_host:
-  user_name: developer
+bastion_host:
+  ip: 127.0.0.1
+  user: developer
 
-local_website_host:
-  user_name: vagrant
-
-local_remote_host:
-  user_name: ubuntu
+remote_host:
+  ip: 127.0.0.1
+  user: ubuntu
