--- a/ansible/playbook_dev_all.yml.example
+++ b/ansible/playbook_dev_all.yml.example
@@ -90,12 +90,12 @@
       redis_port: "{{ web_redis.port }}"
       redis_bind: "{{ web_redis.host }}"
 
-    - role: geerlingguy.ruby
+    - role: vkill.ruby
       tags: ruby
       ruby_install_from_source: True
       ruby_version: 2.2.2
-      # ruby_download_url: http://cache.ruby-lang.org/pub/ruby/2.2/ruby-2.2.2.tar.gz
-      ruby_download_url: https://ruby.taobao.org/mirrors/ruby/2.2/ruby-2.2.2.tar.gz
+      ruby_download_url: http://cache.ruby-lang.org/pub/ruby/ruby-2.2.2.tar.gz
+      ruby_install_bundler: False
 
     - role: geerlingguy.nodejs
       tags: nodejs
@@ -177,19 +177,29 @@
         key: "{{ lookup('file', 'backup/bastion_host/ssh_key/id_rsa.pub') }}"
       tags: ssh_key
 
-    - name: 'Replace gem source with become'
+    - name: 'Replace gem source for {{ web_host.user }}'
       shell: gem sources --add https://gems.ruby-china.org/ --remove https://rubygems.org/
       become: yes
       become_user: "{{ web_host.user }}"
       tags: ruby
 
-    - name: 'Replace bundle source with become'
+    - name: 'Replace gem source for root'
+      shell: gem sources --add https://gems.ruby-china.org/ --remove https://rubygems.org/
+      become: yes
+      become_user: "root"
+      tags: ruby
+
+    - name: Install Bundler.
+      gem: name=bundler state=present user_install=no
+      tags: ruby
+
+    - name: 'Replace bundle source for {{ web_host.user }}'
       shell: bundle config mirror.https://rubygems.org https://gems.ruby-china.org
       become: yes
       become_user: "{{ web_host.user }}"
       tags: ruby
 
-    - name: 'Replace npm registry with become'
+    - name: 'Replace npm registry for {{ web_host.user }}'
       shell: npm config set registry https://registry.npm.taobao.org
       become: yes
       become_user: "{{ web_host.user }}"
