--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -31,6 +31,9 @@
 - src: https://github.com/rvm/rvm1-ansible
   name: rvm_io.rvm1-ruby
 
+- src: https://github.com/vkill/rvm1-ansible/archive/feature/support_override_configuration.tar.gz
+  name: vkill.rvm1-ruby
+
 - src: https://github.com/willshersystems/ansible-sshd
   name: willshersystems.sshd
 
