--- a/website/config/settings.yml
+++ b/website/config/settings.yml
@@ -1,4 +1,3 @@
-time_zone: Asia/Shanghai
 
 super_admin:
   email: admin@example.com
@@ -6,16 +5,22 @@ super_admin:
 two_step_encryption_key: '99999999999999999999999999999999'
 
 ###############################################
+
+time_zone: "Asia/Shanghai"
+
+###############################################
 #
 # How to generate
 # ref https://fedoraproject.org/wiki/Creating_GPG_Keys#Creating_GPG_Keys_Using_the_Command_Line
 #
-website_GPG_key_ID: '99999999'
+# website_GPG_key_ID: '99999999'
 
 #
 # 1 website and bastion_host in same host
 #
-Arch_mode: 1
-Arch_mode_1st:
-  user: dev
-  ssh_public_key: ''
+# Arch_mode: 1
+# Arch_mode_1st:
+#   user: dev
+#   ssh_public_key: ''
+
+
