update settings and edit seeds

--- a/ansible/playbook_dev_all.yml.example
+++ b/ansible/playbook_dev_all.yml.example
@@ -206,10 +206,16 @@
       tags: nodejs
 
   post_tasks:
-    - name: "Generate webiste settings development.local.yml"
+    - name: "Generate webiste settings vagrant_development.local.yml"
       template:
         src: "website_settings_local.yml.j2"
-        dest: "/website/config/settings/development.local.yml"
-      tags: config
+        dest: "/website/config/settings/vagrant_development.local.yml"
+      tags: web_host
 
+    - name: "Set ENV for webiste vagrant flag"
+      lineinfile:
+        dest:   "/etc/environment"
+        regexp: "^VAGRANT="
+        line:   "VAGRANT=1"
+      tags: web_host
 
