--- a/website/config/cable.yml
+++ b/website/config/cable.yml
@@ -1,7 +1,7 @@
 # Action Cable uses Redis by default to administer connections, channels, and sending/receiving messages over the WebSocket.
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://<%= Settings.web_redis.host %>:<%= Settings.web_redis.port %>/1
 
 development:
   adapter: async
