--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -57,3 +57,6 @@
 
 - src: https://github.com/vkill/ansible-role-gpg_key
   name: vkill.gpg_key
+
+- src: https://github.com/vkill/ansible-role-environment_variables
+  name: vkill.environment_variables
